...
            self.presenter?.restartQuiz()
        }
        alert.addAction(action)
        
        self.present(alert, animated: true, completion: nil)
        
        alert.view.accessibilityIdentifier = "Final game"
    }
    
    func highlightImageBorder(isCorrect: Bool) {
        imageView.layer.masksToBounds = true
        imageView.layer.borderWidth = 8
        imageView.layer.borderColor = isCorrect ? UIColor(named: "YP Green (iOS)")?.cgColor : UIColor(named: "YP Pink (iOS)")?.cgColor
...
